error.txt
Topic5McLaughlin.c:14:1: error: C++ style comments are not allowed in ISO C90
   14 | //error related forward declarations
      | ^
Topic5McLaughlin.c:14:1: note: (this will be reported only once per input file)
